--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY= 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
-LANGUAGE= EN
+OPENAI_API_KEY= 
+LANGUAGE=
 LOCAL_PROXY=
 DISABLE_LOCAL_PROXY=
